# codezilla

./: README.md  index.html  package.json  vite.config.ts
backend/: Dockerfile  pyproject.toml
backend/src/backend/: __init__.py  db.py  etransfer.py
src/: App.tsx  index.css
src/components/: block.tsx  features.tsx  form.tsx  header.tsx  note.tsx  pbar.tsx  registration.tsx  transfer.tsx
src/handlers/: addStudent.ts  base.ts  getSeatCount.ts  verifyTransaction.ts
